--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -30,7 +30,7 @@ sidebar_CTA:
     CTA_title: Looking to Buy a Home?
     CTA_text: Search the entire MLS for homes located in -- MARKET --.
     CTA_link_text: Home Search Tool
-    CTA_url: /homesearch/
+    CTA_url: http://www.josephsabato.com/listings-search/
 lender:
   show_section: false
   header_text: Preferred Lender
