Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -69,7 +69,7 @@ socials:
   facebook_url: https://www.facebook.com/theelitehometeam/
   linkedin_url: https://www.linkedin.com/in/rex-jarnagin-9780ab8/
   gplus_url:
-  youtube_url:
+  youtube_url: https://www.youtube.com/channel/UCW2doP91JRkAYz4qZdUhgjA
   twitter_url: https://twitter.com/EliteHomeTeam1
   instagram_url:
   pinterest_url:
