Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -68,7 +68,7 @@ socials:
   review_sm_icons: false
   facebook_url: https://www.facebook.com/theelitehometeam/
   linkedin_url: https://www.linkedin.com/in/rex-jarnagin-9780ab8/
-  gplus_url:
+  gplus_url: https://plus.google.com/u/0/b/101546321099117960183/101546321099117960183
   youtube_url: https://www.youtube.com/channel/UCW2doP91JRkAYz4qZdUhgjA
   twitter_url: https://twitter.com/EliteHomeTeam1
   instagram_url:
