--- a/_data/testimonials.yml
+++ b/_data/testimonials.yml
@@ -2,4 +2,7 @@ show_testimonials_section: true
 testimonial:
   - quote: '"They extended themselves in every way, with their service, their professionalism, with their ability to create interest in a property, and several other things. They really did a lot, and I enjoyed the whole process! "'
     name: Tyrone Ervin
-    audio: '<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/324158602&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>'
+    audio: 'https://soundcloud.com/dave-knight-48243682/how-the-dave-knight-real-estate-team-helped-tyrone-with-his-home-sale'
+  - quote:
+    name:
+    audio:
