Updated '_data/testimonials.yml' via CloudCannon

--- a/_data/testimonials.yml
+++ b/_data/testimonials.yml
@@ -3,6 +3,6 @@ testimonial:
   - quote: '"They extended themselves in every way, with their service, their professionalism, with their ability to create interest in a property, and several other things. They really did a lot, and I enjoyed the whole process! "'
     name: Tyrone Ervin
     audio: 'https://soundcloud.com/dave-knight-48243682/how-the-dave-knight-real-estate-team-helped-tyrone-with-his-home-sale'
-  - quote: "They're very thorough and extremely reliable. One of the things I really appreciated is that when there ended up being an unexpected expense, my agent covered it all on his own. They really show great follow through."
+  - quote: "\"They're very thorough and extremely reliable. One of the things I really appreciated is that when there ended up being an unexpected expense, my agent covered it all on his own. They really show great follow through.\""
     name: Luz Moya
     audio: 'https://soundcloud.com/dave-knight-48243682/how-the-dave-knight-real-estate-team-helped-luz-moya'
