Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -56,8 +56,8 @@ lender:
   name: Tim Chase
   brand: 719 Lending
   phone: 719-231-4893
-  email: contacttimchase@gmail.com
-  url:
+  email: Tchase@719Lending.com
+  url: 108 E St. Vrain Colorado Springs, CO 80903
 
 welcome_box:
   welcome_headline: Join Our -- MARKET -- VIP List
