Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -57,7 +57,7 @@ lender:
   brand: 719 Lending
   phone: 719-231-4893
   email: Tchase@719Lending.com
-  url: 108 E St. Vrain Colorado Springs, CO 80903
+  url: 108 E St. Vrain <br> Colorado Springs, CO 80903
 
 welcome_box:
   welcome_headline: Join Our -- MARKET -- VIP List
