--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -69,7 +69,7 @@ socials:
   review_sm_icons: false
   facebook_url: https://www.facebook.com/pages/Dave-Friedman-Real-Estate-at-ReMax/86520966532?ref=br_rs
   linkedin_url: http://www.linkedin.com/in/friedmandavid
-  gplus_url: https://plus.google.com/+DaveFriedman?prsrc=5
+  gplus_url: https://plus.google.com/115037410677439559388
   youtube_url: https://www.youtube.com/channel/UCYg5beOA0R1xWVZqukzSNBA
   twitter_url: https://twitter.com/RealEstateRants
   instagram_url:
