Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -80,7 +80,7 @@ socials:
   podcast_url:
 
 podcast:
-  title:
+  title: Charleston Real Estate Video Blog with Dave Friedman
   categories: Education
   image: /img/podcast.jpg
   subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the -- MARKET -- Area Real Estate Market'
