Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -40,12 +40,12 @@ welcome_headline: Get Educated About Real Estate
 welcome_text_markdown: 'Our mission at the Greater Toronto Group is to be your best resource for real estate advice. Whether you are a buyer, seller, or investor, our team of professionals can answer any questions you might have about real estate. Subscribe to this blog to get the latest news on local market trends and receive expert tips for buying or selling a home.'
 socials:
   review_sm_icons: false
-  facebook_url: 'https://www.facebook.com/greatertorontogroup/'
+  facebook_url: 'https://www.facebook.com/GPGToronto/'
   linkedin_url: 'https://www.linkedin.com/company-beta/13200313?pathWildcard=13200313'
   gplus_url: 'https://plus.google.com/u/0/103371443976306431820'
   youtube_url: 'https://www.youtube.com/channel/UCgrT2K1wXO0XQXNlXU_51aQ'
   twitter_url: 'https://twitter.com/GVT_Marketing'
-  instagram_url: 'https://www.instagram.com/greatertorontogroup/'
+  instagram_url: 'https://www.instagram.com/gpgtoronto'
   pinterest_url:
   zillow_url:
   trulia_url:
