--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,55 +1,49 @@
 audit_header: false
-title: -- CLIENT BRAND --
+title: '-- CLIENT BRAND --'
 description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
 show_custom_links: true
 custom_links:
   - title: Neighborhood Finder
-    url: http://homesfromhouston.com/neighborhoods
+    url: 'http://homesfromhouston.com/neighborhoods'
   - title: Testinomials
     url: /client-testimonials
-
 client:
   name: Mike Gray
   license_number:
-  about_markdown: |
-    When it comes to providing peerless customer service and fulfilling the needs of his clients, if Michael Gray tells you that "the sky's the limit," he's not kidding. Formerly an airline pilot, where attention to detail and focus are crucial and following a process is absolutely necessary to achieve proper results, Mike learned early in his real estate career how well those skills transfer and how important they are to the buyers and sellers with whom he works.
+  about_markdown: "When it comes to providing peerless customer service and fulfilling the needs of his clients, if Michael Gray tells you that \"the sky's the limit,\" he's not kidding. Formerly an airline pilot, where attention to detail and focus are crucial and following a process is absolutely necessary to achieve proper results, Mike learned early in his real estate career how well those skills transfer and how important they are to the buyers and sellers with whom he works."
   market: Houston
   brand: Mike Gray Team
-  brokerage: Heritage Texax Properties
-  address: 1177 West Loop South, 12th Floor<br>Houston, TX 77027
+  brokerage: Heritage Texas Properties
+  address: '1177 West Loop South, 12th Floor<br>Houston, TX 77027'
   phone: 832-428-6453
   phone_type: Cell
   phone2: 713-341-1763
   phone2_type: Direct
   email: Mike@TheMikeGrayTeam.com
-  url: http://www.homesfromhouston.com
-
+  url: 'http://www.homesfromhouston.com'
 CTAs:
   first_CTA_text: Home Valuation
-  first_CTA_URL: http://www.yourhoustonhomesearch.com/homevalue/houston
+  first_CTA_URL: 'http://www.yourhoustonhomesearch.com/homevalue/houston'
   second_CTA_text: Home Search
-  second_CTA_URL: http://www.yourhoustonhomesearch.com
+  second_CTA_URL: 'http://www.yourhoustonhomesearch.com'
   VR_form:
-
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/005.jpg
     CTA_title: Looking to Buy a Home?
     CTA_text: Search the entire MLS for homes located in -- MARKET --.
     CTA_link_text: Home Search Tool
-    CTA_url: http://www.yourhoustonhomesearch.com
-
+    CTA_url: 'http://www.yourhoustonhomesearch.com'
 lender:
   show_section: false
   header_text: Preferred Lender
-  headshot_path: http://fillmurray.com/200/200
+  headshot_path: 'http://fillmurray.com/200/200'
   logo_path: /img/logo.png
   logo_path_2:
   name: Bill Murray
   brand: Lender Co.
   phone: 555-555-5555
   email: bill@murray.com
-  url: http://eyegoop.com
-
+  url: 'http://eyegoop.com'
 welcome_box:
   welcome_headline: Join Our -- MARKET -- VIP List
   welcome_text_markdown: >
@@ -58,30 +52,28 @@ welcome_box:
     professionals can answer any questions you might have about real estate.
     Subscribe to this blog to get the latest news on local market trends and
     receive expert tips for buying or selling a home.
-
 socials:
   review_sm_icons: false
-  facebook_url: https://www.facebook.com/themikegrayteam
-  linkedin_url: http://www.linkedin.com/in/mikegray1
-  gplus_url: https://plus.google.com/108375586447747919481
-  youtube_url: https://www.youtube.com/channel/UCNCYHOjxyptAgwf3gyy3oUQ
-  twitter_url: https://twitter.com/MikeGray01
+  facebook_url: 'https://www.facebook.com/themikegrayteam'
+  linkedin_url: 'http://www.linkedin.com/in/mikegray1'
+  gplus_url: 'https://plus.google.com/108375586447747919481'
+  youtube_url: 'https://www.youtube.com/channel/UCNCYHOjxyptAgwf3gyy3oUQ'
+  twitter_url: 'https://twitter.com/MikeGray01'
   instagram_url:
   pinterest_url:
   zillow_url:
   trulia_url:
   yelp_url:
   podcast_url:
-
 podcast:
   title: Houston Real Estate Podcast with Mike Gray
-  categories: Education
+  categories:
+    - Education
   image: /img/podcast.jpg
   subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the -- MARKET -- Area Real Estate Market'
   description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
   keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in -- MARKET --, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
   author: '-- CLIENT NAME --'
-
 images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
@@ -91,18 +83,16 @@ images:
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
 site_colors:
-  brand_color: '#E26714'
-  theme_color: '#3874AA'
+  brand_color: '#e26714'
+  theme_color: '#3874aa'
   theme_text_color: '#353535'
   main_body_color: '#ffffff'
   main_body_text_color: '#353535'
-
 header_shadow:
   h_shadow: 0px
   w_shadow: 2px
   shadow_spread: 3px
-  shadow_color: "#CBCAC9"
-
+  shadow_color: '#cbcac9'
 buttons:
   button_radius_number: 0
   button_padding_width_number: 10
