fixing input on firefox

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -10,7 +10,7 @@ client:
   name:
   license_number: "CalBRE #01863252"
   about_markdown: |
-    With so many Realtors out there eager for your business, what do I provide that makes me any different? Team Approach: They say "A Team Always Outperforms An Individual." The reason is simple: The business of Real Estate is a complex and broad area and you as the client deserve to be served by agents and brokers who are super specialized in the areas that matter to you.
+    'With so many Realtors out there eager for your business, what do I provide that makes me any different? Team Approach: They say "A Team Always Outperforms An Individual." The reason is simple: The business of Real Estate is a complex and broad area and you as the client deserve to be served by agents and brokers who are super specialized in the areas that matter to you.'
   market: Valencia
   brand: Randy Plaice &amp; Associates
   brokerage: Re/Max of Valencia
