adding endorsement widget and guardian logo

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -28,7 +28,7 @@ client:
   phone2:
   phone2_type:
   email: TheBetzTeam@gmc-inc.com
-  url: http://thebetzteam.com
+  url: http://TheBetzTeam.com
 
 CTAs:
   first_CTA_text: Apply Online
