Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -51,7 +51,7 @@ lender:
   logo_path_2:
   name: Bill Murray
   brand: Lender Co.
-  phone: 720.263.6411
+  phone: 720-515-1738
   email: bill@murray.com
   url: http://eyegoop.com
 
