Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -15,7 +15,7 @@ client:
   brand: Elite Home Team
   brokerage: Your Castle Real Estate
   address: 9090 S Ridgeline Blvd 110 Highlands Ranch CO 80129
-  phone: 720-263-6411
+  phone: 720-515-1738
   phone_type:
   phone2:
   phone2_type:
@@ -51,7 +51,7 @@ lender:
   logo_path_2:
   name: Bill Murray
   brand: Lender Co.
-  phone: 720-515-1738
+  phone: 720.263.6411
   email: bill@murray.com
   url: http://eyegoop.com
 
