Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -24,8 +24,8 @@ client:
   url: KLTre.com
 
 CTAs:
-  first_CTA_text: Products
-  first_CTA_URL: http://revealmyhomevalue.com/
+  first_CTA_text: 
+  first_CTA_URL: 
   second_CTA_text: Join Us
   second_CTA_URL: https://www.discoverazhomesforsale.com/
   VR_form: http://oi.vresp.com?fid=f217b02ad7
