--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -24,10 +24,10 @@ client:
   url: KLTre.com
 
 CTAs:
-  first_CTA_text: 
-  first_CTA_URL: 
-  second_CTA_text: Join Us
-  second_CTA_URL: https://www.discoverazhomesforsale.com/
+  first_CTA_text: Join Us 
+  first_CTA_URL: https://www.discoverazhomesforsale.com/
+  second_CTA_text:
+  second_CTA_URL:
   VR_form: http://oi.vresp.com?fid=f217b02ad7
 
 sidebar_CTA:
