--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -31,18 +31,18 @@ CTAs:
   VR_form: http://oi.vresp.com?fid=f217b02ad7
 
 sidebar_CTA:
-  - CTA_image_path: /img/cta-images/004.jpg
-    CTA_title: "Products"
-    CTA_text: "Agent Training Seminars"
-    CTA_link_text: "Download for Agent Training Seminars"
-    CTA_url: http://revealmyhomevalue.com/
+  - CTA_image_path: /img/cta-images/006.jpg
+    CTA_title: "Join Us"
+    CTA_text: "Let's talk about how The Kevin Langan Team can build your Real Estate Career."
+    CTA_link_text: "Looking to Build Your Real Estate Career?"
+    CTA_url: https://www.discoverazhomesforsale.com/
 
 second_sidebar_CTA:
-  - CTA_image_path2: /img/cta-images/005.jpg
-    CTA_title2: "Join Us"
-    CTA_text2: "Let's talk about how The Kevin Langan Team can build your Real Estate Career."
-    CTA_link_text2: "Looking to Build Your Real Estate Career?"
-    CTA_url2: https://www.discoverazhomesforsale.com/
+  - CTA_image_path2:
+    CTA_title2:
+    CTA_text2:
+    CTA_link_text2:
+    CTA_url2:
 
 lender:
   show_section: false
