Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -77,7 +77,7 @@ socials:
   zillow_url: http://www.zillow.com/profile/Dave-Friedman/
   trulia_url: http://www.trulia.com/profile/dave-friedman-agent-charleston-sc-9567361/overview
   yelp_url: http://www.yelp.com/biz/dave-friedman-real-estate-mount-pleasant
-  podcast_url:
+  podcast_url: https://itunes.apple.com/us/podcast/charleston-real-estate-video-blog-with-dave-friedman/id1242410656?mt=2
 
 podcast:
   title: Charleston Real Estate Video Blog with Dave Friedman
