--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -5,17 +5,20 @@ show_custom_links: false
 custom_links:
   - title:
     url:
-
 client:
   name: Chris Myers
   license_number:
-  about_markdown: |
+  about_markdown: >-
     Chris is a graduate of The Ohio State University with an MBA in Finance and
     Real Estate. The grandson of a seasoned real estate developer, Chris carries
     on the long family tradition by helping Central Floridians with their home
     buying and home selling goals. Prior to his real estate career, Chris worked
     in the advertising and marketing industry in Ohio until his passion for real
-    estate and the Florida lifestyle brought him to the Sunshine State.<br><br>His professional experience as a business owner and sales professional
+    estate and the Florida lifestyle brought him to the Sunshine State.
+
+    <br>
+
+    <br>His professional experience as a business owner and sales professional
     provides Chris the ability to see the bigger picture, especially when it
     comes to developing long lasting relationships and providing genuine customer
     care. Using his marketing background, Chris has developed effective and time
@@ -36,19 +39,17 @@ client:
   url: 'http://www.OrlandoPropertyGroup.com'
 CTAs:
   first_CTA_text: Home Valuation
-  first_CTA_URL: /homevalue/
+  first_CTA_URL: www.centralfloridahousevalue.com
   second_CTA_text: Home Search
-  second_CTA_URL: /homesearch/
+  second_CTA_URL: 'http://www.orlandopropertygroup.com/search.php?#?q_limit=9&q_prioritize=agents.0.id=261091912%7Coffice.id=261011739&mlsId=28&q_sort=createdAt-&q_offset=0'
   phone_CTA: true
-  VR_form: http://oi.vresp.com?fid=17c0da686f
-
+  VR_form: 'http://oi.vresp.com?fid=17c0da686f'
 sidebar_CTA:
   CTA_image_path: /img/cta-images/001.jpg
   CTA_title: Looking to Buy a Home?
   CTA_text: Search the entire MLS for homes located in -- MARKET --.
   CTA_link_text: Home Search Tool
   CTA_url: /homesearch/
-
 welcome_box:
   welcome_headline: Join Our -- MARKET -- VIP List
   welcome_text_markdown: >
@@ -57,7 +58,6 @@ welcome_box:
     professionals can answer any questions you might have about real estate.
     Subscribe to this blog to get the latest news on local market trends and
     receive expert tips for buying or selling a home.
-
 socials:
   facebook_url: 'https://www.facebook.com/OrlandoFloridaRealEstate'
   linkedin_url: 'https://www.linkedin.com/in/christophermyers'
@@ -69,42 +69,37 @@ socials:
   zillow_url: 'http://www.zillow.com/profile/cjmyers/'
   trulia_url:
   yelp_url: 'https://www.yelp.com/biz/orlando-property-group-orlando'
-  podcast_url: https://itunes.apple.com/us/podcast/orlando-real-estate-podcast/id1197467563?mt=2
-
+  podcast_url: 'https://itunes.apple.com/us/podcast/orlando-real-estate-podcast/id1197467563?mt=2'
 podcast:
   title: Orlando Real Estate Podcast with Chris Myers
-  categories: News &amp; Politics
+  categories:
   image: /img/Podcast.jpg
   subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the -- MARKET -- Area Real Estate Market'
   description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
   keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in -- MARKET --, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
-  author: 'Chris Myers'
-
+  author: Chris Myers
 images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
-  logo_width_number: 40rem
+  logo_width_number:
   hero_text: Real Estate Video Blog
   hero_background_hex: '#094264'
   hero_image_path: /img/background.jpg
-
 site_colors:
   brand_color: '#ab0d1f'
   theme_color: '#ab0d1f'
   theme_text_color: '#353535'
   main_body_color: '#ffffff'
   main_body_text_color: '#353535'
-
 header_shadow:
   h_shadow: 0px
   w_shadow: 2px
   shadow_spread: 7px
-  shadow_color: "#000"
-
+  shadow_color: '#000000'
 buttons:
-  button_radius_number: 4px
-  button_padding_width_number: 10px
-  button_padding_height_number: 15px
+  button_radius_number:
+  button_padding_width_number:
+  button_padding_height_number:
   button_border_color: '#ffffff'
   button_background_color: '#ffffff'
   button_text_color: '#ab0d1f'
