--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -87,8 +87,8 @@ site_colors:
   main_body_color: '#ffffff'
   main_body_text_color: '#353535'
 buttons:
-  # button_radius_number: 4
-  # button_padding_number: 15
+  button_radius_number: 4
+  button_padding_number: 15
   button_border_color: '#ffffff'
   button_background_color: '#ffffff'
   button_text_color: '#ab0d1f'
