--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -5,62 +5,74 @@ show_custom_links: false
 custom_links:
   - title:
     url:
-
 client:
   name: Becky Ivins
   license_number: 47388
-  about_markdown: |
-    Becky began selling real estate in 1977 and in 1979 she started her own brokerage, Movers Real Estate Company. Among her designations is SRES, Senior Real Estate Specialists, and she delights in transitioning seniors from their homes that have become too much to maintain into independent living or assisted living. Her most recent designation is MRP, Military Relocation Professional and with 2 of her 3 sons serving our country as US Army officers, she has firsthand knowledge of how important real estate professionals are when military families buy or sell in our area.
+  about_markdown: >-
+    Becky began selling real estate in 1977 and in 1979 she started her own
+    brokerage, Movers Real Estate Company. Among her designations is SRES, Senior
+    Real Estate Specialists, and she delights in transitioning seniors from their
+    homes that have become too much to maintain into independent living or
+    assisted living. Her most recent designation is MRP, Military Relocation
+    Professional and with 2 of her 3 sons serving our country as US Army
+    officers, she has firsthand knowledge of how important real estate
+    professionals are when military families buy or sell in our area.
 
-    Becky has hosted her live radio talk show on KTOK since 2006 where she welcomes call-in questions on Saturday mornings at 8:00 on News Radio 1000 KTOK.
 
-    Becky Ivins enjoys the endorsements of Dave Ramsey, Glenn Beck, Barbara Corcoran and John Tesh.
 
-    Becky’s approaches a real estate transaction with a business attitude and the heart of a social worker. She delights in providing a full service transaction backed by decades of experience and a wealth of knowledge.
+    Becky has hosted her live radio talk show on KTOK since 2006 where she
+    welcomes call-in questions on Saturday mornings at 8:00 on News Radio 1000
+    KTOK.
+
+
+
+    Becky Ivins enjoys the endorsements of Dave Ramsey, Glenn Beck, Barbara
+    Corcoran and John Tesh.
+
+
+
+    Becky’s approaches a real estate transaction with a business attitude and the
+    heart of a social worker. She delights in providing a full service
+    transaction backed by decades of experience and a wealth of knowledge.
   market:
-  brand:
+  brand: Movers Real Estate Company
   brokerage:
-  address: 6905 NW 122nd St, Oklahoma City, OK 73142
+  address: '6905 NW 122nd St, </br> Oklahoma City, OK 73142'
   phone: 405-722-3232
   phone_type:
   phone2:
   phone2_type:
   email: becky@beckyivins.com
   url: beckyivins.com
-
 CTAs:
   first_CTA_text: Home Valuation
-  first_CTA_URL: http://www.beckyivins.com/home-valuation/
+  first_CTA_URL: 'http://www.beckyivins.com/home-valuation/'
   second_CTA_text: Home Search
-  second_CTA_URL: http://www.beckyivinsteam.com/search/criteria/gp_1/s_2
-  VR_form: http://oi.vresp.com?fid=fdba8bab18
-
+  second_CTA_URL: 'http://www.beckyivinsteam.com/search/criteria/gp_1/s_2'
+  VR_form: 'http://oi.vresp.com?fid=fdba8bab18'
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/004.jpg
-    CTA_title: "What’s Your -- MARKET -- Home Worth?"
-    CTA_text: "Are you thinking of selling your home or interested in learning about home prices in your neighborhood? We can help you."
-    CTA_link_text: "Free -- MARKET -- Home Value Report"
-    CTA_url: http://www.beckyivins.com/home-valuation/
-
+    CTA_title: What’s Your -- MARKET -- Home Worth?
+    CTA_text: Are you thinking of selling your home or interested in learning about home prices in your neighborhood? We can help you.
+    CTA_link_text: Free -- MARKET -- Home Value Report
+    CTA_url: 'http://www.beckyivins.com/home-valuation/'
 second_sidebar_CTA:
   - CTA_image_path2: /img/cta-images/005.jpg
-    CTA_title2: "Looking for a -- MARKET -- Home?"
-    CTA_text2: "Search the entire MLS for your -- MARKET -- home."
-    CTA_link_text2: "Search the MLS"
-    CTA_url2: http://www.beckyivinsteam.com/search/criteria/gp_1/s_2
-
+    CTA_title2: Looking for a -- MARKET -- Home?
+    CTA_text2: Search the entire MLS for your -- MARKET -- home.
+    CTA_link_text2: Search the MLS
+    CTA_url2: 'http://www.beckyivinsteam.com/search/criteria/gp_1/s_2'
 lender:
   show_section: false
   header_text: Preferred Lender
-  headshot_path: http://fillmurray.com/200/200
+  headshot_path: 'http://fillmurray.com/200/200'
   logo_path: /img/logo.png
   logo_path_2:
   name: Bill Murray
   brand: Lender Co.
   phone: 555-555-5555
   email: bill@murray.com
-  url: http://eyegoop.com
-
+  url: 'http://eyegoop.com'
 welcome_box:
   welcome_headline: Join Our -- MARKET -- VIP List
   welcome_text_markdown: >
@@ -69,51 +81,47 @@ welcome_box:
     professionals can answer any questions you might have about real estate.
     Subscribe to this blog to get the latest news on local market trends and
     receive expert tips for buying or selling a home.
-
 socials:
   review_sm_icons: false
-  facebook_url: https://www.facebook.com/MoversRealEstate/
-  linkedin_url: https://www.linkedin.com/in/beckyivins/
-  gplus_url: https://plus.google.com/110340869662115073058
-  youtube_url: https://www.youtube.com/channel/UCY9aF6TdC_o3gcnEduqFRmA
-  twitter_url: https://twitter.com/BeckyIvins
+  facebook_url: 'https://www.facebook.com/MoversRealEstate/'
+  linkedin_url: 'https://www.linkedin.com/in/beckyivins/'
+  gplus_url: 'https://plus.google.com/110340869662115073058'
+  youtube_url: 'https://www.youtube.com/channel/UCY9aF6TdC_o3gcnEduqFRmA'
+  twitter_url: 'https://twitter.com/BeckyIvins'
   instagram_url:
   pinterest_url:
-  zillow_url: https://www.zillow.com/profile/BECKY0/
-  trulia_url: https://www.trulia.com/profile/becky-ivins-agent-oklahoma-city-ok-zgvvht4f/overview
-  yelp_url: https://www.yelp.com/biz/becky-ivins-movers-real-estate-oklahoma-city
+  zillow_url: 'https://www.zillow.com/profile/BECKY0/'
+  trulia_url: 'https://www.trulia.com/profile/becky-ivins-agent-oklahoma-city-ok-zgvvht4f/overview'
+  yelp_url: 'https://www.yelp.com/biz/becky-ivins-movers-real-estate-oklahoma-city'
   podcast_url:
-
 podcast:
   title:
-  categories: Education
+  categories:
+    - Education
   image: /img/podcast.jpg
   subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the Oklahoma City Area Real Estate Market'
   description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from Beck Ivins Movers Real Estate - your professional Real Estate Agents.'
   keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in Oklahoma City, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
-  author: 'Beck Ivins'
-
+  author: Beck Ivins
 images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo2.png
   logo_width_number: 40
-  hero_text: -- MARKET -- Real Estate Video Blog
+  hero_text: '-- MARKET -- Real Estate Video Blog'
   hero_background_hex: '#094264'
   hero_image_path: /img/background2.jpg
   post_cover: /img/cover.jpg
 site_colors:
-  brand_color: '#A91C2D'
+  brand_color: '#a91c2d'
   theme_color: '#000000'
   theme_text_color: '#5d9bd3'
   main_body_color: '#ffffff'
   main_body_text_color: '#353535'
-
 header_shadow:
   h_shadow: 0px
   w_shadow: 2px
   shadow_spread: 7px
-  shadow_color: transparent
-
+  shadow_color: 'rgba(0, 0, 0, 0)'
 buttons:
   button_radius_number: 0
   button_padding_width_number: 10
