--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -81,7 +81,7 @@ podcast:
 images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
-  logo_width_number:
+  logo_width_number: 40
   hero_text: Real Estate Video Blog
   hero_background_hex: '#094264'
   hero_image_path: /img/background.jpg
