--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -61,7 +61,7 @@ socials:
   review_sm_icons: false
   facebook_url: https://www.facebook.com/John-McAdams-Your-Ocean-City-Realtor-120194181385606/
   linkedin_url: https://www.linkedin.com/in/john-mcadams-6b776413a/
-  gplus_url:
+  gplus_url: https://plus.google.com/109267341108689554215
   youtube_url: https://www.youtube.com/channel/UCk4KDXewG5Gm0M6GcGplNkA
   twitter_url: https://twitter.com/johnrmcadams
   instagram_url:
