Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -61,7 +61,7 @@ socials:
   linkedin_url: 'https://www.linkedin.com/in/troyjcopeland'
   gplus_url: 'https://plus.google.com/115934816387268087687'
   youtube_url: 'https://www.youtube.com/channel/UCUM1_F9Sez-4s5fsQvWg67Q'
-  twitter_url: 'https://twitter.com/CopelandREGroup'
+  twitter_url:
   instagram_url: 'https://www.instagram.com/troy.copeland/?hl=en'
   pinterest_url: 'https://www.pinterest.com/troyjcopeland/'
   zillow_url: 'https://www.zillow.com/profile/troy026/'
