Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -79,7 +79,7 @@ podcast:
   categories: Education
   image: /img/podcast.png
   subtitle: 'Find your best resource for valuable information, strategy and tips on how to improve your health and your life'
-  description: 'If you are looking for your best resource for valuable information, strategy and tips on how to improve your health and your life -- get all the information and the latest updates from Dr Q and Dr Ho - the latest updates from Dr. Q and Dr. Ho'
+  description: 'If you are looking for your best resource for valuable information, strategy and tips on how to improve your health and your life -- get all the information and the latest updates from Dr. Q and Dr. Ho - the latest updates from Dr. Q and Dr. Ho'
   keywords: 'Chiropractic, Wellness, Exercise, General Health, Nutrition'
   author: 'Dr Q'
 
