--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -14,7 +14,7 @@ client:
 
     As one of the top leading Realtor® in the county, Victoria has received multiple awards, She is an honest, professional business woman, She is hard working, dedicated and a great listener. Her approachable demeanor makes everyone feel comfortable. Your goals become hers, with customer service as a top priority. Victoria will use her skills to make your dreams a reality! Searching for a new home or selling your current home can be a complicated and exhausting experience. It is absolutely essential to find a real estate agent that is deeply involved in the business and loves what they do to show you the way.
   market: San Diego
-  brand: Sandoval Select Premier Properties
+  brand: Select Premier Properties
   brokerage:
   address: 1419 University Ave, Suite D San Diego, CA 92103
   phone: 619-392-2455
@@ -22,13 +22,13 @@ client:
   phone2:
   phone2_type:
   email: relyonvicky@gmail.com
-  url: http://www.victoriasandoval.com
+  url: http://victoriasellssd.com/
 
 CTAs:
   first_CTA_text: Home Valuation
-  first_CTA_URL: http://www.selectpremierproperties.com/index.html#u4183-18
+  first_CTA_URL: http://victoriasellssd.com/home-value-analysis/
   second_CTA_text: Home Search
-  second_CTA_URL: http://www.selectpremierproperties.com/listings.html
+  second_CTA_URL: http://victoriasellssd.com/basic-search/
   VR_form: http://oi.vresp.com?fid=26436c0f69
 
 sidebar_CTA:
@@ -36,14 +36,14 @@ sidebar_CTA:
     CTA_title: "What’s Your -- MARKET -- Home Worth?"
     CTA_text: "Are you thinking of selling your home or interested in learning about home prices in your neighborhood? We can help you."
     CTA_link_text: "Free Home Value Report"
-    CTA_url: http://www.selectpremierproperties.com/index.html#u4183-18
+    CTA_url: http://victoriasellssd.com/home-value-analysis/
 
 second_sidebar_CTA:
   - CTA_image_path2: /img/cta-images/005.jpg
     CTA_title2: "Looking for a -- MARKET -- Home?"
     CTA_text2: "Search the entire MLS for your -- MARKET -- home."
     CTA_link_text2: "Search the MLS"
-    CTA_url2: http://www.selectpremierproperties.com/listings.html
+    CTA_url2: http://victoriasellssd.com/basic-search/
 
 lender:
   show_section: false
@@ -58,9 +58,9 @@ lender:
   url: http://eyegoop.com
 
 welcome_box:
-  welcome_headline: Join Our -- MARKET -- VIP List
+  welcome_headline: Join Our VIP List
   welcome_text_markdown: >
-    Our mission at Sandoval Premier Properties is to be your best resource for real estate
+    Our mission at Select Premier Properties is to be your best resource for real estate
     advice. Whether you are a buyer, seller, or investor, our team of
     professionals can answer any questions you might have about real estate.
     Subscribe to this blog to get the latest news on local market trends and
@@ -93,7 +93,7 @@ images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 40
-  hero_text: San Diego Real Estate Video Blog
+  hero_text: Victoria Sandoval's Real Estate Video Blog
   hero_background_hex: '#094264'
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
