--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -22,7 +22,7 @@ client:
   phone2:
   phone2_type:
   email: relyonvicky@gmail.com
-  url: http://victoriasellssd.com/
+  url: http://victoriasellssd.com
 
 CTAs:
   first_CTA_text: Home Valuation
