license number fix and favi

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,7 +8,7 @@ custom_links:
 
 client:
   name: Victoria Sandoval
-  license_number: 01723300
+  license_number: 'CA BRE# 01723300'
   about_markdown: |
     Victoria Sandoval has the touch of sold. Victoria was born and raised and lived in San Diego for over 30 years. As a bilingual San Diego native, she understands the different neighborhoods and their particular nuances. Victoria sets a new standard in building relationships with all her clients and maximizing the exposure of your home to potential buyers. Known for her smooth transactions, Victoria routinely unites all sides of the real estate process, creating a seamless operation for her clients. She is approachable and adaptive, working well with all personality types. Her intimate knowledge of the market will save you, the homeowner, time and money in searching for your new home.
 
