--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,5 +1,5 @@
 audit_header: false
-title: Greater Calgary Group Real Estate Video Blog
+title: Greater Property Group Calgary Real Estate Video Blog
 description: If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from the Greater Calgary Group - your professional Calgary Real Estate Agents.
 show_custom_links: true
 custom_links:
@@ -13,15 +13,15 @@ client:
 
     Our goal is to provided our local and international clients with exceptional, personalized service, while remaining flexible and innovative so we can thrive in any economic cycle.  Our team provides the tools needed to achieve prominence in the marketplace through education, technology, and training.
   market:
-  brand: Greater Calgary Group
+  brand: Greater Property Group Calgary
   brokerage: RE/MAX First
   address: 8820 Blackfoot Trail SE Unit 115<br>Calgary, AB T2J 3J1
   phone: 403-818-9611
   phone_type:
   phone2:
   phone2_type:
-  email: office@greatercalgarygroup.com
-  url: http://www.GreaterCalgaryGroup.com
+  email: info@greaterpropertygroup.com
+  url: http://www.greaterpropertygroup.com/calgary
   first_CTA_text: Home Evaluation
   first_CTA_URL: http://www.greatercalgarygroup.com/homevalue/value
   second_CTA_text: Home Search
@@ -45,13 +45,13 @@ socials:
   yelp_url:
   podcast_url: https://itunes.apple.com/us/podcast/greater-calgary-group-real-estate-podcast/id1193247036?mt=2
 podcast:
-  title: Greater Calgary Group - Podcast about Real Estate
+  title: Greater Property Group Calgary - Podcast about Real Estate
   categories: News & Politics
   image: '/img/podcast.png'
   subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the Greater Calgary Area Real Estate Market'
   description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from the Greater Calgary Group - your professional Calgary Real Estate Agents.'
   keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in Calgary, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
-  author: Greater Calgary Group
+  author: Greater Property Group Calgary
 images:
   client_headshot_path: '/img/headshot.png'
   hero_logo_path: '/img/logo.png'
