Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -45,7 +45,7 @@ socials:
   yelp_url:
   podcast_url: https://itunes.apple.com/us/podcast/greater-calgary-group-real-estate-podcast/id1193247036?mt=2
 podcast:
-  title: Greater Property Group Calgary - Podcast about Real Estate
+  title: Greater Property Group Calgary - Real Estate Podcast
   categories: News & Politics
   image: '/img/podcast.png'
   subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the Greater Calgary Area Real Estate Market'
