Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -61,13 +61,13 @@ socials:
   linkedin_url: 'https://www.linkedin.com/in/troyjcopeland'
   gplus_url: 'https://plus.google.com/115934816387268087687'
   youtube_url: 'https://www.youtube.com/channel/UCUM1_F9Sez-4s5fsQvWg67Q'
-  twitter_url:
+  twitter_url: 'https://twitter.com/TroyCopelandRE?lang=en'
   instagram_url: 'https://www.instagram.com/troy.copeland/?hl=en'
   pinterest_url: 'https://www.pinterest.com/troyjcopeland/'
   zillow_url: 'https://www.zillow.com/profile/troy026/'
   trulia_url: 'https://www.trulia.com/profile/troy-copeland-agent-frisco-tx-zg862vtx/overview'
   yelp_url: 'https://www.yelp.com/biz/troy-j-copeland-copeland-real-estate-group-frisco'
-  podcast_url: https://itunes.apple.com/us/podcast/frisco-real-estate-podcast-with-troy-copeland/id1223770723?mt=2
+  podcast_url: 'https://itunes.apple.com/us/podcast/frisco-real-estate-podcast-with-troy-copeland/id1223770723?mt=2'
 podcast:
   title: Frisco Real Estate Podcast with Troy Copeland
   categories:
