Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -12,7 +12,7 @@ client:
   market: Boynton Beach Florida
   brand: Jacques Realty Group
   brokerage: Century 21 Tenace Realty
-  address: '3960 Hypoluxo Rd <br> Boyton Beach FL, 33436'
+  address: '3960 Hypoluxo Rd <br> Boynton Beach FL, 33436'
   phone: 561-305-8988
   phone_type: Cell
   phone2: 561-740-2100
@@ -67,7 +67,7 @@ podcast:
   title: Boynton Beach Florida Real Estate Podcast with Loodmy Jacques
   categories:
     - Education
-  image: http://i.imgur.com/I9q5DqM.jpg
+  image: 'http://i.imgur.com/I9q5DqM.jpg'
   subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the -- MARKET -- Area Real Estate Market'
   description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
   keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in -- MARKET --, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
