Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -9,7 +9,7 @@ client:
   name:
   license_number:
   about_markdown: >
-    The Greater Vancouver Group with Re/Max First is a boutique real estate firm
+    The Greater Property Group Vancouver with Re/Max First is a boutique real estate firm
     comprised of premier real estate professionals working together to serve
     Vancouver and Area.  We offer the best of both world's - the power of an
     international brand and personalized service of a boutique office.
@@ -21,7 +21,7 @@ client:
     thrive in any economic cycle.  Our team provides the tools needed to achieve
     prominence in the marketplace through education, technology, and training.
   market: Vancouver
-  brand: Greater Vancouver Group
+  brand: Greater Propery Group Vancouver
   brokerage: RE/MAX Advantage
   address: '102 - 321 Sixth Street<br>New Westminster, BC V3L 3A7'
   phone: 604-809-8883
