Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -28,8 +28,8 @@ client:
   phone_type:
   phone2:
   phone2_type:
-  email: sales@greatervancouvergroup.com
-  url: 'http://www.GreaterVancouverGroup.com'
+  email: info@greaterpropertygroup.com
+  url: 'greaterpropertygroup.com/Vancouver'
   first_CTA_text: Home Valuation
   first_CTA_URL: 'http://www.greaterpropertygroup.com/cma-vancouver.php'
   second_CTA_text: Home Search
