--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -92,7 +92,7 @@ images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 60
-  hero_text: Real Estate Video Blog
+  hero_text:
   hero_background_hex: '#094264'
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
