--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,53 +1,47 @@
 audit_header: false
-title: -- CLIENT BRAND --
+title: '-- CLIENT BRAND --'
 description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
 show_custom_links: false
 custom_links:
   - title:
     url:
-
 client:
   name: John McAdams
   license_number:
-  about_markdown: |
-    John was born and raised in Maryland. Ocean City has been an integral part of his life for over 40 years. From family vacations in my early years to raising a family here he has extensive knowledge of Ocean City and everything special it has to offer. Whether your buying or selling he has over 20+ years in the Real Estate and Mortgage Industry. He knows how to negotiate and navigate a transaction form both sides start to finish. He currently lives in Berlin, MD with his wife and three children.
+  about_markdown: 'John was born and raised in Maryland. Ocean City has been an integral part of his life for over 40 years. From family vacations in my early years to raising a family here he has extensive knowledge of Ocean City and everything special it has to offer. Whether your buying or selling he has over 20+ years in the Real Estate and Mortgage Industry. He knows how to negotiate and navigate a transaction form both sides start to finish. He currently lives in Berlin, MD with his wife and three children.'
   market: Ocean City
   brand: John McAdams Real Estate
   brokerage: Keller Williams
-  address: 5700 Coastal Hwy.<br>Ste. 303 Ocean City, MD 21842
+  address: '5700 Coastal Hwy.<br>Ste. 303 Ocean City, MD 21842'
   phone: 410-995-8450
-  phone_type:
-  phone2:
-  phone2_type:
+  phone_type: Office
+  phone2: 301-370-3131
+  phone2_type: Cell
   email: jmcadams@kw.com
-  url: http://www.findmyocbeachhome.com
-
+  url: 'http://www.findmyocbeachhome.com'
 CTAs:
   first_CTA_text: Home Valuation
-  first_CTA_URL: http://www.findmyocbeachhome.com/cma/property-valuation/
+  first_CTA_URL: 'http://www.findmyocbeachhome.com/cma/property-valuation/'
   second_CTA_text: Home Search
-  second_CTA_URL: http://www.findmyocbeachhome.com/
-  VR_form: http://oi.vresp.com?fid=2cccbeb3e3
-
+  second_CTA_URL: 'http://www.findmyocbeachhome.com/'
+  VR_form: 'http://oi.vresp.com?fid=2cccbeb3e3'
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/004.jpg
     CTA_title: Looking to Buy a Home?
     CTA_text: Search the entire MLS for homes located in -- MARKET --.
     CTA_link_text: Home Search Tool
-    CTA_url: http://www.findmyocbeachhome.com/
-
+    CTA_url: 'http://www.findmyocbeachhome.com/'
 lender:
   show_section: false
   header_text: Preferred Lender
-  headshot_path: http://fillmurray.com/200/200
+  headshot_path: 'http://fillmurray.com/200/200'
   logo_path: /img/logo.png
   logo_path_2:
   name: Bill Murray
   brand: Lender Co.
   phone: 555-555-5555
   email: bill@murray.com
-  url: http://eyegoop.com
-
+  url: 'http://eyegoop.com'
 welcome_box:
   welcome_headline: Join Our -- MARKET -- VIP List
   welcome_text_markdown: >
@@ -56,30 +50,28 @@ welcome_box:
     professionals can answer any questions you might have about real estate.
     Subscribe to this blog to get the latest news on local market trends and
     receive expert tips for buying or selling a home.
-
 socials:
   review_sm_icons: false
-  facebook_url: https://www.facebook.com/John-McAdams-Your-Ocean-City-Realtor-120194181385606/
-  linkedin_url: https://www.linkedin.com/in/john-mcadams-6b776413a/
-  gplus_url: https://plus.google.com/109267341108689554215
-  youtube_url: https://www.youtube.com/channel/UCk4KDXewG5Gm0M6GcGplNkA
-  twitter_url: https://twitter.com/johnrmcadams
+  facebook_url: 'https://www.facebook.com/John-McAdams-Your-Ocean-City-Realtor-120194181385606/'
+  linkedin_url: 'https://www.linkedin.com/in/john-mcadams-6b776413a/'
+  gplus_url: 'https://plus.google.com/109267341108689554215'
+  youtube_url: 'https://www.youtube.com/channel/UCk4KDXewG5Gm0M6GcGplNkA'
+  twitter_url: 'https://twitter.com/johnrmcadams'
   instagram_url:
   pinterest_url:
-  zillow_url: https://www.zillow.com/profile/John-McAdams/
-  trulia_url: https://www.trulia.com/profile/john-mcadams-agent-ocean-city-md-zgc0593k/overview
+  zillow_url: 'https://www.zillow.com/profile/John-McAdams/'
+  trulia_url: 'https://www.trulia.com/profile/john-mcadams-agent-ocean-city-md-zgc0593k/overview'
   yelp_url:
   podcast_url:
-
 podcast:
   title: Ocean City Real Estate Podcast with John McAdams
-  categories: Education
-  image: http://i.imgur.com/zy5dQxN.jpg
+  categories:
+    - Education
+  image: 'http://i.imgur.com/zy5dQxN.jpg'
   subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the -- MARKET -- Area Real Estate Market'
   description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
   keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in -- MARKET --, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
   author: '-- CLIENT NAME --'
-
 images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
@@ -94,13 +86,11 @@ site_colors:
   theme_text_color: '#353535'
   main_body_color: '#ffffff'
   main_body_text_color: '#353535'
-
 header_shadow:
   h_shadow: 0px
   w_shadow: 2px
   shadow_spread: 7px
-  shadow_color: "#EDEBEE"
-
+  shadow_color: '#edebee'
 buttons:
   button_radius_number: 0
   button_padding_width_number: 10
